--- a/src/.travis.yml
+++ b/src/.travis.yml
@@ -1,18 +1,7 @@
-{\rtf1\ansi\ansicpg1252\cocoartf1671\cocoasubrtf200
-{\fonttbl\f0\fmodern\fcharset0 Courier;}
-{\colortbl;\red255\green255\blue255;\red38\green38\blue38;\red240\green240\blue240;\red210\green0\blue53;
-}
-{\*\expandedcolortbl;;\cssrgb\c20000\c20000\c20000;\cssrgb\c95294\c95294\c95294;\cssrgb\c86667\c6667\c26667;
-}
-\margl1440\margr1440\vieww10800\viewh8400\viewkind0
-\deftab720
-\pard\pardeftab720\sl440\partightenfactor0
-
-\f0\fs35\fsmilli17778 \cf2 \cb3 \expnd0\expndtw0\kerning0
-language: \cf4 node_js\cf2 \
-node_js: \cf4 node\cf2 \
-cache:\
-  directories:\
-    - \cf4 node_modules\cf2 \
-env:\
-  - \cf4 CI=true}
+language: node_js
+node_js: node
+cache:
+  directories:
+    - node_modules
+env:
+  - CI=true
